Update parent version and remove security manager arg