@@ -17,10 +17,10 @@
         <url>https://gitlab.kit.edu/api/v4/projects/150727/packages/maven</url>
       </repository>
     </repositories>
-		<parent>
+	<parent>
 		<groupId>edu.kit.kastel.sdq.artemis</groupId>
 		<artifactId>test-framework-parent</artifactId>
-		<version>0.30.0-SNAPSHOT</version>
+		<version>0.31.0-SNAPSHOT</version>
 	</parent>
     <dependencies>
         <dependency>
@@ -51,7 +51,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.5.3</version>
                 <configuration>
-                    <argLine>-Dfile.encoding=UTF-8 -Djava.security.manager=allow</argLine>
+                    <argLine>-Dfile.encoding=UTF-8</argLine>
                     <systemProperties>
                         <property>
                             <name>sourceDirectory</name>
